Actualizado .gitignore - Ignorados archivos de los SO
Se ignoran los archivos ocultos que generan los diversos Sistemas Operativos.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,19 @@
 /memora/*.out
 /memora/*.synctex.gz
 /memora/*.toc
+
+# -- Sistemas Operativos ------------------------------
+
+# Windows
+
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+
+.*
+!.gitignore
+!.htaccess
+*~
