Actualizado .gitignore - Ignorados salida LaTeX
Ahora si los ignora de verdad.

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,10 @@
 # Archivos de salida de LaTex
 
 /memoria/*.aux
-/memora/*.log
-/memora/*.out
-/memora/*.synctex.gz
-/memora/*.toc
+/memoria/*.log
+/memoria/*.out
+/memoria/*.synctex.gz
+/memoria/*.toc
 
 # -- Sistemas Operativos ------------------------------
 
