Actualizado .gitignore - Ignorada memoria compilada.
Ahora el archivo pdf no se sincroniza.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /memoria/*.out
 /memoria/*.synctex.gz
 /memoria/*.toc
+/memoria/*.pdf
 
 # -- Sistemas Operativos ------------------------------
 
