--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 /memoria/*.synctex.gz
 /memoria/*.toc
 /memoria/*.pdf
+/memoria/*.bbl
+/memoria/*.blg
 
 # -- Sistemas Operativos ------------------------------
 
