Actualizado .gitignore - Ignora salida de bibTeX

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /memoria/*.pdf
 /memoria/*.bbl
 /memoria/*.blg
+/memoria/bibliografia/*.log
 
 # -- Sistemas Operativos ------------------------------
 
