--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 /memoria/*.synctex.gz
 /memoria/*.toc
 /memoria/*.pdf
+/memoria/*.bbl
+/memoria/*.blg
+
 
 # -- Sistemas Operativos ------------------------------
 
