Actualizado .gitignore - Archivos glosario y memoria.pdf
Ahora no se sincronizan los archivos que genera el glosario, pero si el archivo "memoria.pdf". Nos interesa tener en master una memoria con la última compilación bien.

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,11 @@
 /memoria/*.pdf
 /memoria/*.bbl
 /memoria/*.blg
+/memoria/bibliografia/*.log
+/memoria/*.glo
+/memoria/*.ist
 
+!/memoria/memoria.pdf
 
 # -- Sistemas Operativos ------------------------------
 
