Ignorados los archivos *.synctex.gz(busy)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /memoria/bibliografia/*.log
 /memoria/*.glo
 /memoria/*.ist
+/memoria/*.synctex.gz(busy)
 
 # -- Sistemas Operativos ------------------------------
 
