--- a/.gitignore
+++ b/.gitignore
@@ -20,12 +20,11 @@
 /memoria/bibliografia/*.log
 /memoria/*.glo
 /memoria/*.ist
-<<<<<<< HEAD
 
-#!/memoria/memoria.pdf
-=======
+
+!/memoria/memoria.pdf
 /memoria/*.synctex.gz(busy)
->>>>>>> a872ce47bde0cc987bafb4d423bafd0d4ee8259e
+
 
 # -- Sistemas Operativos ------------------------------
 
